--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -15,6 +15,8 @@
     </head>
     <body>
         <p></p>
-        <div class="power-1" id="animate"></div>
+        <div class="power-1">
+            <div class="power-2" id=""></div>
+        </div>
     </body>
 </html>
