even less cancer

--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -10,13 +10,27 @@
             {
                 background-color: black;
             }
+            h1
+            {
+                color: azure;
+                display: block;
+                margin-top: 20px;
+                margin-bottom: 100px;
+                margin-left: 650px;
+            }
         </style>
         <link rel="stylesheet" href="power.folder/power1.css">
+        <link rel="stylesheet" href="power.folder/power2.css">
+        <link rel="stylesheet" href="power.folder/power3.css">
     </head>
     <body>
-        <p></p>
         <div class="power-1">
-            <div class="power-2" id=""></div>
+            <h1>Pulsing text plus flex propertie.</h1>
+            <div class="power-2">
+                <div class="power-3" id="animate1">1</div>
+                <div class="power-3" id="animate2">2</div>
+                <div class="power-3" id="animate3">3</div>
+            </div>
         </div>
     </body>
 </html>
