--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -14,9 +14,14 @@
             {
                 color: azure;
                 display: block;
-                margin-top: 20px;
+                justify-content: center;
+                display: flex;
                 margin-bottom: 100px;
-                margin-left: 650px;
+                font-size: xx-large;
+            }
+            div
+            {
+                font-size: x-small;
             }
         </style>
         <link rel="stylesheet" href="power.folder/power1.css">
@@ -25,11 +30,11 @@
     </head>
     <body>
         <div class="power-1">
-            <h1>Pulsing text plus flex propertie.</h1>
+            <h1>Pulsing text plus flex propertie (cancer text).</h1>
             <div class="power-2">
-                <div class="power-3" id="animate1">1</div>
-                <div class="power-3" id="animate2">2</div>
-                <div class="power-3" id="animate3">3</div>
+                <div class="power-3" id="animate1">reese's puffs reese's puffs</div>
+                <div class="power-3" id="animate2">eat em up eat em up</div>
+                <div class="power-3" id="animate3">eat em up</div>
             </div>
         </div>
     </body>
