flex tape but stronger

--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -10,24 +10,28 @@
             {
                 background-color: black;
             }
+
             h1
             {
                 color: azure;
-                display: block;
                 justify-content: center;
                 display: flex;
                 margin-bottom: 100px;
-                font-size: xx-large;
+                font-size: xxx-large;
             }
 
             h2
             {
-                font-size: xxx-large;
+                color: azure;
+                display: flex;
+                justify-content: center;
+                padding: 4em;
+                font-size: xx-large;
             }
 
             div
             {
-                font-size: x-small;
+                font-size: xx-small;
             }
         </style>
         <link rel="stylesheet" href="power.folder/power1.css">
@@ -37,13 +41,17 @@
     <body>
         <div class="power-1">
             <h1>Pulsing text plus flex propertie (cancer text).</h1>
-            <div class="power-2" id="power2">
+            <div class="power-2" id="power1">
                 <div class="power-3" id="animate1">reese's puffs reese's puffs</div>
                 <div class="power-3" id="animate2">eat em up eat em up</div>
                 <div class="power-3" id="animate3">eat em up</div>
             </div>
-            <h2></h2>
-            <div class="power-2"></div>
+            <h2>Pulsing stretch text (still cancer)</h2>
+            <div class="power-2" id="power2">
+                <div class="power-3"></div>
+                <div class="power-3"></div>
+                <div class="power-3"></div>
+            </div>
         </div>
     </body>
 </html>
