--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -17,7 +17,7 @@
                 justify-content: center;
                 display: flex;
                 margin-bottom: 100px;
-                font-size: xxx-large;
+                font-size: xx-large;
             }
 
             h2
@@ -37,20 +37,28 @@
         <link rel="stylesheet" href="power.folder/power1.css">
         <link rel="stylesheet" href="power.folder/power2.css">
         <link rel="stylesheet" href="power.folder/power3.css">
+        <link rel="stylesheet" href="power.folder/power4.css">
+        <link rel="stylesheet" href="power.folder/power5.css">
     </head>
     <body>
         <div class="power-1">
-            <h1>Pulsing text plus flex propertie (cancer text).</h1>
-            <div class="power-2" id="power1">
+            <h1>Pulsing text plus flex propertie (cancer text and extra credit).</h1>
+            <div class="power-2" id="power2-1">
                 <div class="power-3" id="animate1">reese's puffs reese's puffs</div>
                 <div class="power-3" id="animate2">eat em up eat em up</div>
                 <div class="power-3" id="animate3">eat em up</div>
             </div>
             <h2>Pulsing stretch text (still cancer)</h2>
-            <div class="power-2" id="power2">
-                <div class="power-3"></div>
-                <div class="power-3"></div>
-                <div class="power-3"></div>
+            <div class="power-2" id="power2-2">
+                <div class="power-4" id="power4">1</div>
+                <div class="power-4" id="power4">2</div>
+                <div class="power-4" id="power4">3</div>
+            </div>
+            <h2>Flex column text (flex tape on cancer)</h2>
+            <div class="power-2" id="power2-3">
+                <div class="power-5"></div>
+                <div class="power-5"></div>
+                <div class="power-5"></div>
             </div>
         </div>
     </body>
