finding more flex tape

--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -56,9 +56,9 @@
             </div>
             <h2>Flex column text (flex tape on cancer)</h2>
             <div class="power-2" id="power2-3">
-                <div class="power-5"></div>
-                <div class="power-5"></div>
-                <div class="power-5"></div>
+                <div class="power-5" id="power5">1</div>
+                <div class="power-5" id="power5">2</div>
+                <div class="power-5" id="power5">3</div>
             </div>
         </div>
     </body>
