flex tape and even more flex tape

--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -18,6 +18,7 @@
                 display: flex;
                 margin-bottom: 100px;
                 font-size: xx-large;
+                flex-wrap: wrap;
             }
 
             h2
@@ -27,11 +28,13 @@
                 justify-content: center;
                 padding: 4em;
                 font-size: xx-large;
+                flex-wrap: wrap;
             }
 
             div
             {
                 font-size: xx-small;
+                flex-wrap: wrap;
             }
         </style>
         <link rel="stylesheet" href="power.folder/power1.css">
@@ -56,9 +59,9 @@
             </div>
             <h2>Flex column text (flex tape on cancer)</h2>
             <div class="power-2" id="power2-3">
-                <div class="power-5" id="power5">1</div>
-                <div class="power-5" id="power5">2</div>
-                <div class="power-5" id="power5">3</div>
+                <div class="power-5">1</div>
+                <div class="power-5">2</div>
+                <div class="power-5">3</div>
             </div>
         </div>
     </body>
