flex tape rainbow

--- a/.github/UnlimitedPower.html
+++ b/.github/UnlimitedPower.html
@@ -37,6 +37,7 @@
                 flex-wrap: wrap;
             }
         </style>
+        <link rel="stylesheet" href="Images.folder/UnlimitedPower1.jpg">
         <link rel="stylesheet" href="power.folder/power1.css">
         <link rel="stylesheet" href="power.folder/power2.css">
         <link rel="stylesheet" href="power.folder/power3.css">
@@ -45,7 +46,7 @@
     </head>
     <body>
         <div class="power-1">
-            <h1>Pulsing text plus flex propertie (cancer text and extra credit).</h1>
+            <h1>Pulsing text plus flex propertie (cancer text that change color and extra credit).</h1>
             <div class="power-2" id="power2-1">
                 <div class="power-3" id="animate1">reese's puffs reese's puffs</div>
                 <div class="power-3" id="animate2">eat em up eat em up</div>
@@ -53,9 +54,9 @@
             </div>
             <h2>Pulsing stretch text (still cancer)</h2>
             <div class="power-2" id="power2-2">
-                <div class="power-4" id="power4">1</div>
-                <div class="power-4" id="power4">2</div>
-                <div class="power-4" id="power4">3</div>
+                <div class="power-4">1</div>
+                <div class="power-4">2</div>
+                <div class="power-4">3</div>
             </div>
             <h2>Flex column text (flex tape on cancer)</h2>
             <div class="power-2" id="power2-3">
@@ -63,6 +64,8 @@
                 <div class="power-5">2</div>
                 <div class="power-5">3</div>
             </div>
+            <h2></h2>
+            <div class="power-2" id="power2-4"></div>
         </div>
     </body>
 </html>
